--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    aula ipw
+    <h1>
+        Descubra o número aleatório
+    </h1>
+
+    <label>Digite um número</label>
+    <input type="text" name="userNumber" id="userNumber">
+    <button onclick="tryNumber()">Tentar</button>    
+
+    <script src="main.js"></script>
 </body>
 </html>
