Adicionado exemplo 01 da aula

--- a/index.html
+++ b/index.html
@@ -6,14 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        Descubra o número aleatório
-    </h1>
+   <h1>Introdução à Programação Web</h1>
 
-    <label>Digite um número</label>
-    <input type="text" name="userNumber" id="userNumber">
-    <button onclick="tryNumber()">Tentar</button>    
-
-    <script src="main.js"></script>
+   <ul>
+       <li>Exemplo 1: <a href="./exemplo-01/minha-rotina.html">Minha rotina</a></li>
+   </ul>
 </body>
 </html>
